--- a/ms_2_intro_res_disc.Rmd
+++ b/ms_2_intro_res_disc.Rmd
@@ -43,12 +43,9 @@ We then reexamine two recent marine biodiversity studies - an assessment of the 
 
 The IUCN publishes species range maps based on expert input of spatial boundaries of a given species' "limits of distribution" (IUCN 2015) - essentially a refined extent of occurrence, based on observation records and refined by expert understanding of the species' range and habitat preferences.  In contrast, AquaMaps models species distribution based environmental preferences (e.g. temperature, depth, salinity) deduced from occurrence records, published species databases such as FishBase, and expert knowledge.  The AquaMaps model overlays these environmental preferences atop a map of environmental attributes on a 0.5 degree grid, creating a global raster of "probability of occurrence" for each species (Kaschner et al. 2006, Ready et al. 2010).  Studies frequently define "presence" for AquaMaps by applying a probability threshold, e.g. 40% or greater probability of occurrence (Halpern et al. 2012, 2015).  
 
-The methodologies behind the creation of these datasets imply differences in prediction of species distribution due to errors of commission (falsely indicating species presence) and omission (falsely indicating species absence).  Geographic range data such as IUCN range maps frequently introduce commission errors, while species distribution models such as AquaMaps will likely introduce fewer commission errors but more omission errors.  Each type of error bears different implications for conservation goals: commission errors can result in prioritizing areas not relevant to conservation goals, while omission errors may result in protected area networks that fail to include important habitat and range (Rondinini et al. 2006).  ___By comparing maps resulting from each methodology, we can identify and possibly address mechanistic causes for each type of error.___
-
-<!--BSH: I haven’t read the paper, but it sounds like we need to acknowledge what was already discussed/done there.  This may actually simplify things, such that we condense the first three paragraphs of this section into a single paragraph that restates what that paper found (and cite it) and add anything else we want to point out.  But we will definitely need a succinct statement about how our paper moves well beyond what that paper did. Not sure best approach without reading the paper.-->
+The methodologies behind the creation of these datasets imply differences in prediction of species distribution due to errors of commission (falsely indicating species presence) and omission (falsely indicating species absence).  Geographic range data such as IUCN range maps frequently introduce commission errors, while species distribution models such as AquaMaps will likely introduce fewer commission errors but more omission errors.  Each type of error bears different implications for conservation goals: commission errors can result in prioritizing areas not relevant to conservation goals, while omission errors may result in protected area networks that fail to include important habitat and range (Rondinini et al. 2006).  By comparing maps resulting from IUCN and AquaMaps methodolog, we can identify and possibly address mechanistic causes for each type of error.
 
 The two datasets have notably different taxonomic (Fig. 1) and regional (Fig. 2) coverage.  AquaMaps encompasses a broader range of taxa than IUCN, as IUCN spatial data files are only available for select taxonomic groups that have been comprehensively assessed. While species numbers in both datasets peak in tropical latitudes near the equator, species counts for IUCN maps drops quickly beyond 30°N and 30°S, while species counts for AquaMaps remains robust well into temperate latitudes.  The longitude frequency plots show a slight bias in the IUCN dataset away from the Atlantic and eastern Pacific compared to AquaMaps.  To achieve more comprehensive global coverage of species ranges these two datasets can be used together, but the underlying methodological differences complicate such direct comparisons.
-
 
 ``` {r load_spp_list_by_quad, echo = FALSE}
 spp_list_quads <- read.csv('data/spp_list_quads.csv', stringsAsFactors = FALSE)
@@ -85,24 +82,26 @@ med_occ_q123 <- round(median(spp_quads_occ$mean_occ[spp_quads_occ$quad %in% c('q
 
 To explore differences in species distribution and range between the two datasets, we plotted the distribution alignment (how much of the smaller range falls within the larger range, i.e. where on the map) against the area alignment (ratio of smaller range area to larger range area, i.e. how much of the map) for each shared species (Fig. 3A). 
  This analysis revealed a general negative linear pattern, suggesting that increasing similarity in range area correlates with decreasing distribution alignment.
- AquaMaps tends to extrapolate species ranges beyond known occurrences, such that each additional unit of range predicted by AquaMaps will fall in different locations than an additional unit of range predicted using IUCN methodology. For species with dissimilar range areas, predicted distribution for the smaller range can more easily fall within the generous bounds of the larger range. For species with increasingly similar range areas, differences in methodology become more difficult to "hide," and the distribution alignment generally becomes poorer.
+ AquaMaps tends to extrapolate species ranges into suitable areas beyond known occurrences, such that each additional unit of range predicted by AquaMaps will fall in different locations than an additional unit of range predicted using IUCN methodology. For species with dissimilar range areas, predicted distribution for the smaller range can more easily fall within the generous bounds of the larger range. For species with increasingly similar range areas, differences in methodology become more difficult to "hide," and the distribution alignment generally becomes poorer.
 
-The mean distribution alignment for species included in both datasets was `r dist_align_mean`%; the mean area alignment was `r area_align_mean`%. By dividing the map-paired species into quadrants based on these means, we highlight categories of relationships that help further explain this general pattern. The upper right quadrant includes species (n = `r n_q1`) whose described ranges are above average in both spatial distribution and extent. These species tend to be well-studied and include wide-ranging pelagic organisms such as marine mammals, tunas, and billfishes (Fig. 3B). This result is not surprising, as species with very large ranges are likely to be more aligned regardless of methodology simply because their ranges span nearly the entire map.
+The mean distribution alignment for species included in both datasets was `r dist_align_mean`%; the mean area alignment was `r area_align_mean`%. By dividing the map-paired species into quadrants based on these means, we highlight categories of relationships that help further explain this general pattern. For representative maps from each category, please refer to the supplemental materials (SI Fig. XXX).  
 
-The area-mismatched ranges contained in the upper left quadrant (n = `r n_q2`) include many species whose spatial distribution is similar, but where the IUCN range is notably larger, often extending into deeper water.  For example, corals dominate this quadrant (n = `r n_q2_corals`; `r round(n_q2_corals/n_q2 * 100, 1)`% of all species in this quadrant), and IUCN range maps tend to extend corals into waters beyond their preferred depths, likely introducing errors of commission. ___See supplemental information for maps that highlight this issue.___ _should there just be a blanket "see SOM for maps that typify each quadrant"?_
-Ocean depth is explicitly included in AquaMaps models, while depth is frequently overlooked as a factor in IUCN range maps.  Simply clipping IUCN range maps to known depth preferences would resolve many of these mismatches.
+The upper right quadrant includes species (n = `r n_q1`) whose described ranges are above average in both spatial distribution and extent. These species tend to be well-studied and include wide-ranging pelagic organisms such as marine mammals, tunas, and billfishes (Fig. 3B). This result is not surprising, as species with very large ranges are likely to be more aligned regardless of methodology simply because their ranges span nearly the entire map.
+
+The area-mismatched ranges contained in the upper left quadrant (n = `r n_q2`) include many species whose spatial distribution is similar, but where the IUCN range is notably larger, often extending into deeper water.  For example, corals dominate this quadrant (n = `r n_q2_corals`; `r round(n_q2_corals/n_q2 * 100, 1)`% of all species in this quadrant), and IUCN range maps tend to extend corals into waters beyond their preferred depths, likely introducing errors of commission  (SI Figs. XXX, XXX). 
+ Ocean depth is explicitly included in AquaMaps models, while depth is frequently overlooked as a factor in IUCN range maps.  Simply clipping IUCN range maps to known depth preferences would resolve many of these mismatches.
 
 Species found in the lower right quadrant (n = `r n_q3`) often represent cases of "two wrongs make a right."  For these species, IUCN ranges frequently overextend into unsuitable depths, as in the case of many upper left quadrant species, while at the same time AquaMaps ranges often aggressively extrapolate presence into locations where IUCN predicts absence, introducing additional commission errors.  Consequently, area ratios are close to 100%, though similar areas are meaningless when the distributions are poorly aligned.
 
 The most vexing cases are in the lower left quadrant (n = `r n_q4`), where neither distribution nor area match well. Data-poor species are more common in this quadrant; indeed, the median number of species occurrence records (averaging OBIS and GBIF occurrences) for this quadrant is `r med_occ_q4` records, compared to a median of `r med_occ_q123` records for species across the other three quadrants.  When extrapolating from limited observations, the AquaMaps model often predicts species presence well beyond known occurrences, introducing commission errors; at the same time, IUCN range maps generally target known occurrences, possibly introducing omission errors for data-limited species.
 
-___While we examined IUCN Red List extinction risk categories by quadrant, we found no compelling patterns.  See SOM for details.___
+While we examined IUCN Red List extinction risk categories by quadrant, expecting to see more concurrence between maps for species of concern; however, we found no compelling patterns (SI Fig. XXX).
 
 -----
 
 # Implications
 
-Clear and significant differences in species range descriptions between AquaMaps and IUCN range maps due to method-driven differences in commission and omission errors.  To examine the implications of these differences, we replicated two recent studies, varying only the prioritization of one data set over the other.
+Method-driven differences in commission and omission errors drive clear and significant differences in species range descriptions between AquaMaps and IUCN datasets.   To examine the implications of these differences, we replicated two recent studies, varying only the prioritization of one data set over the other.
 
 **Case Study: The Ocean Health Index**
 
@@ -115,8 +114,6 @@ We recalculated the OHI species status score under several scenarios to observe 
  
 Given that only `r format(p_both_all, big.mark = ',')` percent of species overlap, it is surprising that changing the priority for overlapping species from IUCN maps to AquaMaps would result in such large country-level score shifts as seen in scenarios 2 and 3.  While many country scores showed only small variation across all three scenarios, select countries gained up to 5 points while others dropped as many as 12 points.  Significantly, the global score decreased by two full points in scenario 3, indicating that an arbitrary change in how the two datasets are combined can result in a more dire assessment of species conservation status. 
 
-
-
 -----  
 
 **Case Study: MPA Gap Analysis**
@@ -125,9 +122,11 @@ Klein et al. (2015) compare the global distribution of species to the global dis
 
  (<a href = '#fig5'>Figure 5</a>) displays the results of applying this methodology under new scenarios.  When comparing the conclusions based upon an IUCN-only scenario to an AquaMaps-only scenario (using 2015 AquaMaps data and a 0% threshold sets the most meaningful comparison) we found a five-fold increase in the proportion of gap species (6.4% of species vs. 1.2%) and dramatically larger proportion of species with less than 2% of their range protected (73.2% of species vs. 47.7%).  However, this comparison also indicates a larger proportion of well-protected species with greater than 10% of range protected (2.9% of species vs. 1.5%).  Conclusions drawn from each of these datasets would paint dramatically different pictures of the protection afforded by our current global MPA network. 
  
-___Should end with a more solid statement of how choosing one or the other datasets/thresholds would have different results – using our calculated differences.  JA___
-
 ___If you have room, I think you could add a bit more interpretation of these results here. Could discuss the commission and omission stuff here too to describe these somewhat non-intuitive results??? CS___
+
+- check which species are gap species and look at some maps
+- check which species are 10%+ species and look at some maps
+- where do these species fall georegionally? is there anything odd about their ranges?
 
 -----
 
@@ -135,17 +134,12 @@ ___If you have room, I think you could add a bit more interpretation of these re
 
 AquaMaps and IUCN range maps provide important spatial information on marine species ranges, and show reasonable agreement for many well-studied species, but illustrate uncertainty in our understanding of spatial distribution for many others.  Identifying and addressing differences in these datasets will increase their utility for ecology research and conservation actions.  We have identified several likely drivers of commission errors and omission errors between these datasets, pointing toward improvements to better align the predictions of species distributions. 
 
-__Suggestions for data providers:__
+The IUCN Red List instructional materials for mapping marine species suggest that "bathymetry can be used to delineate species' ranges limited by depth in the same way as elevation is used for terrestrial species" (IUCN 2015).  Especially for demersal communities dependent on photosynthesis, bathymetry should be a primary consideration; data users might consider a simple cutoff at the photosynthetic limit of 200 meters to minimize a likely source of commission errors.
 
-* The IUCN Red List instructional materials for mapping marine species suggest that "bathymetry can be used to delineate species' ranges limited by depth in the same way as elevation is used for terrestrial species" (IUCN 2015).  Unfortunately, this recommendation appears to be applied inconsistently.  Especially for demersal communities dependent on photosynthesis, bathymetry should be a primary consideration; even a simple cutoff at the photosynthetic limit of 200 meters would minimize a likely source of commission errors.
-* The AquaMaps model is a powerful tool for quickly estimating species distribution based on limited information; however, the model's output is only as good as the input data, which for marine species is often sorely limited.  AquaMaps encourages experts to review and comment on the predicted species distribution maps; lessons from the small sample of reviewed maps could be generalized, for example to other species in the same taxonomic group, to further refine the predictions.  This is especially important for data-poor species.
-* In addition to environmental preferences and conditions, AquaMaps mapping parameters include area restrictions to help limit over-extrapolation of AquaMaps models.  Currently area restrictions are denoted by UN Food and Agriculture Organisation (FAO) fisheries reporting areas (Ready et al. 2010); however, area restrictions based on biogeographical criteria, e.g. Marine Ecoregions of the World (Spalding et al. 2007), would likely provide better resolution and predictive power, especially for data-poor species.
+The AquaMaps methodology is a powerful means of quickly estimating species distribution based on limited information; however, the model's output is only as good as the input data, which for marine species is often sorely limited.  In addition to environmental preferences and conditions, AquaMaps mapping parameters include area restrictions to help limit over-extrapolation of AquaMaps models.  Currently, these area restrictions are denoted by UN Food and Agriculture Organisation (FAO) fisheries reporting areas (Ready et al. 2010); however, area restrictions based on biogeographical criteria, e.g. Marine Ecoregions of the World (Spalding et al. 2007), would likely decrease commission errors and improve predictive power, especially for data-poor species.
 
-__Suggestions for data users:__
+When using AquaMaps data alone, changing the probability of occurrence threshold to determine presence becomes a tradeoff between errors of commission (low threshold) and omission (high threshold).  Using AquaMaps in conjunction with IUCN can increase the taxonomic and spatial breadth of coverage, as long as the differences between the datasets can be reasonably minimized. In this case, we recommend a presence threshold of 0% as it most closely approximates the "limits of distribution" criterion defined by IUCN data providers.
 
-* For depth-limited species and taxa, clipping IUCN range polygons to a reasonable bathymetry contour can reduce commission errors due to overprediction of species presence into unsuitable habitats.
-* Using both datasets together can increase the taxonomic and spatial breadth of coverage, as long as the differences between the datasets can be reasonably minimized.  Consider:
-    * An AquaMaps presence threshold of 0% most closely approximates the "limits of distribution" defined by IUCN range maps.
-    * Additional filters on AquaMaps distribution criteria, such as expert review status or the number of occurrence cells used to generate the species model, can help avoid overextrapolation for data poor species.
+<!-- * Additional filters on AquaMaps distribution criteria, such as expert review status or the number of occurrence cells used to generate the species model, can help avoid overextrapolation for data poor species. _using other attributes and variables to filter? this seems outside the scope of this paper_ -->
     
 _(do we need a wrap-it-up paragraph here?  I put that more at the top of the conclusions section... could shift it down here, but probably not needed in both places)_
