--- a/manuscript-main.Rmd
+++ b/manuscript-main.Rmd
@@ -1,16 +1,17 @@
 ---
 title: "Aligning marine species range data to better serve science and conservation"
-author: "Casey O'Hara^1^, Jamie Afflerbach^1^, Benjamin S. Halpern<sup>1, 2, 3</sup>, Courtney Scarborough^1^"
+author: Casey O'Hara^1^, Jamie Afflerbach^1^, Benjamin S. Halpern<sup>1, 2, 3</sup>,
+  Courtney Scarborough^1^
 output:
+  word_document: default
+  pdf_document:
+    number_sections: yes
+    toc: no
   html_document:
     highlight: haddock
     number_sections: yes
     theme: spacelab
     toc: no
-  pdf_document:
-    number_sections: yes
-    toc: no
-  word_document: default
 ---
 
 <!--Title: Titles should be no more than three typeset lines (generally 135 characters including spaces) and should be comprehensible to a broad scientific audience. Please provide a short title of fewer than 50 characters for mobile devices and RSS feeds.-->
